<resources>
    <string name="app_name">桃園國際機場</string>
    <string name="alert_btn_cancel">取消</string>
    <string name="alert_btn_ok">確定</string>
    <string name="alert_btn_add">加入</string>
    <string name="alert_leave">關閉程式</string>
    <string name="news">最新消息</string>
    <string name="processwait">處理中,請稍候...</string>
    <string name="navi_btn_back">返回</string>
    <string name="navi_title_menu">主選單</string>
    <string name="tableview_header_takeoff">%s出發航班</string>
    <string name="tableview_header_arrival">%s抵達航班</string>
    <string name="cell_terminal">航廈</string>
    <string name="cell_time">時間</string>
    <string name="cell_flight_number">航班編號</string>
    <string name="cell_destination">  抵達地：  </string>
    <string name="cell_destination_formenu">  抵達地</string>
    <string name="cell_origin">  出發地：  </string>
    <string name="cell_origin_formenu">  出發地</string>
    <string name="cell_status">狀態</string>
    <string name="flight_takeoff_detail_dialog">  航空公司：    班機號碼：    抵達地：    狀態：    預計起飛時間：       實際起飛時間：       航廈：    登機門：    報到櫃檯：    </string>
    <string name="flight_arrival_detail_dialog">  航空公司：    班機號碼：    出發地：    狀態：    預計抵達時間：       實際抵達時間：       航廈：    行李轉盤：    </string>
    <string name="flight_takeoff_detail_dialog_airname">  航空公司：  </string>
    <string name="flight_takeoff_detail_dialog_airnumber">  班機號碼：  </string>
    <string name="flight_takeoff_detail_dialog_arrivelocation">  抵達地：  </string>
    <string name="flight_takeoff_detail_dialog_status">  狀態：  </string>
    <string name="flight_takeoff_detail_dialog_exceptime">預計起飛時間：</string>
    <string name="flight_takeoff_detail_dialog_actualtime">實際起飛時間：</string>
    <string name="flight_takeoff_detail_dialog_terminal">  航廈：  </string>
    <string name="flight_takeoff_detail_dialog_gate">  登機門：  </string>
    <string name="flight_takeoff_detail_dialog_checkincount">  報到櫃檯：  </string>
    <string name="flight_arrival_detail_dialog_airname">  航空公司：  </string>
    <string name="flight_arrival_detail_dialog_airnumber">  班機號碼：  </string>
    <string name="flight_arrival_detail_dialog_arrivelocation">  出發地：  </string>
    <string name="flight_arrival_detail_dialog_status">  狀態：  </string>
    <string name="flight_arrival_detail_dialog_exceptime">預計抵達時間：</string>
    <string name="flight_arrival_detail_dialog_actualtime">實際抵達時間：</string>
    <string name="flight_arrival_detail_dialog_terminal">  航廈：  </string>
    <string name="flight_arrival_detail_dialog_package">行李轉盤：</string>
    <string name="flight_add_to_my_flight_dialog">加入該航班至我的航班？</string>
    <string name="flight_add_to_my_flight_result_dialog">已成功加入我的航班！</string>
    <string name="flight_add_to_my_flight_error_dialog">該航班已存在於您的航班中</string>
    <string name="need_login_dialog">如欲使用「我的航班」功能，請先登入！</string>
    <string name="navi_title_flight_search">航班搜尋</string>
    <string name="navi_btn_flight_search_mode">搜尋模式</string>
    <string name="btn_flight_search">搜尋</string>
    <string name="text_field_place_holder_search_by_name">請輸入航班代號</string>
    <string name="text_field_place_holder_search_by_city">請輸入城市名稱</string>
    <string name="navi_title_flight_search_result">搜尋結果</string>
    <string name="action_sheet_title">請選擇搜尋方式</string>
    <string name="action_sheet_btn_search_by_name">航空公司/航班代號搜尋</string>
    <string name="action_sheet_btn_search_by_city">城市搜尋</string>
    <string name="action_sheet_btn_search_by_date">日期搜尋</string>
    <string name="action_sheet_btn_cancel">取消</string>
    <string name="login_success">登入成功</string>
    <string name="login_fail">登入失敗</string>
    <string name="login_label_hint">請選擇登入方式</string>
    <string name="login_cancel">暫時不要登入</string>
    <string name="navi_title_my_flight">我的航班</string>
    <string name="cell_btn_delete">刪除</string>
    <string name="flight_dialog_title">詳細資訊</string>
    <string name="navi_title_flight_notify">航班提醒</string>
    <string name="notify_label_hint">於航班起飛前多久時間提醒？</string>
    <string name="notify_hour">小時</string>
    <string name="notify_minute">分鐘</string>
    <string name="notify_alerm_info">航班：    </string>
    <string name="notify_alerm_info2">時間：  </string>
    <string name="notify_alerm_title">航班提醒通知</string>
    <string name="notify_alerm_selector_title">%1$s%2$s 航班提醒設定</string>
    <string-array name="hours_array">
        <item>"0 小時"</item>
        <item>"1 小時"</item>
        <item>"2 小時"</item>
        <item>"3 小時"</item>
        <item>"4 小時"</item>
        <item>"5 小時"</item>
        <item>"6 小時"</item>
        <item>"7 小時"</item>
        <item>"8 小時"</item>
        <item>"9 小時"</item>
        <item>"10 小時"</item>
        <item>"11 小時"</item>
        <item>"12 小時"</item>
    </string-array>
    <string-array name="minutes_array">
        <item>"0 分鐘"</item>
        <item>"10 分鐘"</item>
        <item>"20 分鐘"</item>
        <item>"30 分鐘"</item>
        <item>"40 分鐘"</item>
        <item>"50 分鐘"</item>
    </string-array>
    <string name="title_flight">航班資訊</string>
    <string name="title_nearby">附近資訊</string>
    <string name="title_traffic">機場交通</string>
    <string name="title_utility">實用資訊</string>
    <string name="title_shopping">購物優惠</string>
    <string name="title_communication">通訊服務</string>
    <string name="title_option">設定</string>
    <string name="title_home">首頁</string>
    <string name="title_flight_search">搜尋航班</string>
    <string name="title_my_flight">我的航班</string>
    <string name="title_flight_notify">航班提醒</string>
    <string name="title_airport_facility">機場設施</string>
    <string name="title_restaurant">餐廳商店</string>
    <string name="title_attraction">觀光景點</string>
    <string name="title_hotel">飯店住宿</string>
    <string name="title_gus_station">加油站</string>
    <string name="title_parking">停車場</string>
    <string name="title_restroom">公共廁所</string>
    <string name="title_parking_infomation">停車資訊</string>
    <string name="title_road_rescue">道路救援</string>
    <string name="title_tourist_bus">巡迴巴士</string>
    <string name="title_tram_car">電車</string>
    <string name="title_airport_bus">機場巴士</string>
    <string name="title_taxi">計程車</string>
    <string name="title_mrt_hsr">機場捷運/高鐵</string>
    <string name="title_road_network">即時路況</string>
    <string name="title_weather">天氣</string>
    <string name="title_currency">匯率換算</string>
    <string name="title_conversation">旅行外文</string>
    <string name="title_timezone">時區查詢</string>
    <string name="title_lost_found">服務台/失物協尋</string>
    <string name="title_feedback">問卷調查</string>
    <string name="title_souvenirs">紀念品專區</string>
    <string name="title_discount">免稅店優惠</string>
    <string name="title_international_call">國際電話</string>
    <string name="title_emergency_phone">緊急電話</string>
    <string name="title_roaming_service">漫遊服務</string>
    <string name="nearby_food_category">美食分類</string>
    <string name="nearby_food_store">美食清單</string>
    <string name="navi_btn_edit">編輯</string>
    <string name="navi_btn_region">地區</string>
    <string name="picker_btn_done">完成</string>
    <string name="navi_btn_submit">送出</string>
    <string name="utility_feedback_submit_ok_result">問卷結果已成功送出，感謝您的建議！</string>
    <string name="utility_feedback_submit_already">您最近已填寫過問卷，請過一段時間後再填寫問卷，感謝！</string>
    <string name="option_btn_switch_language">切換語系</string>
    <string name="option_btn_login">登入</string>
    <string name="option_btn_logout">登出</string>
    <string name="option_dilog_language_warning_title">注意！</string>
    <string name="option_dilog_language_warning">切換語系需重新啟動此APP後後，才可成功套用選擇的語系！  按下確定後將立即關閉App。</string>
    <string name="option_picker_title">請選擇語系：</string>
    <string name="option_logout_dialog">您已成功登出！</string>
    <string name="flight_state_arrived">已到</string>
    <string name="flight_state_cancelled">取消</string>
    <string name="flight_state_schedule_change">時間更改</string>
    <string name="flight_state_delay">延遲</string>
    <string name="flight_state_on_time">準時</string>
    <string name="flight_state_departed">出發</string>
    <string name="marquee_parking_info">開車到機場的朋友有福了～ 第1、2航廈內的停車場除了享有前30分鐘免費停車，現在也可以在機場官網上查詢剩餘車位，隨時掌握車位動態，接送機的朋友可以多多利用喔！%s</string>
    <string name="marquee_my_flight_emprt">          開車到機場的朋友有福了～ 第1、2航廈內的停車場除了享有前30分鐘免費停車，現在也可以在機場官網上查詢剩餘車位，隨時掌握車位動態，接送機的朋友可以多多利用喔！          您尚未儲存任何航班資訊，請透過航班資訊，將你欲搭乘的航班新增至我的航班。          </string>
    <string name="marquee_my_flight_arrival">          開車到機場的朋友有福了～ 第1、2航廈內的停車場除了享有前30分鐘免費停車，現在也可以在機場官網上查詢剩餘車位，隨時掌握車位動態，接送機的朋友可以多多利用喔！          飛自     預計時間：        狀態：     實際時間：        航廈：     行李轉盤：  </string>
    <string name="marquee_my_flight_takeoff">          開車到機場的朋友有福了～ 第1、2航廈內的停車場除了享有前30分鐘免費停車，現在也可以在機場官網上查詢剩餘車位，隨時掌握車位動態，接送機的朋友可以多多利用喔！          飛往     預計時間：        狀態：     實際時間：        航廈：     登機門：     報到櫃檯：  </string>
    <string name="flight_notify_warning_detail">無法新增    的航班提醒，因提醒時間已過，請重新設定該航班的提醒時間</string>
    <string name="flight_notify_warning_detail_1">無法新增</string>
    <string name="flight_notify_warning_detail_2">的航班提醒，因提醒時間已過，請重新設定該航班的提醒時間</string>
    <string name="flight_notify_warning_title">提醒時間已過</string>
    <string name="conversation_general">基本會話</string>
    <string name="conversation_ask">問路</string>
    <string name="conversation_traffic">交通機關</string>
    <string name="conversation_travel">旅行社櫃檯</string>
    <string name="conversation_car">租車</string>
    <string name="conversation_dining">餐飲設施</string>
    <string name="conversation_lodging">住宿設施</string>
    <string name="conversation_shopping">購物</string>
    <string name="cannot_retrived_the_flight_information_due_to_network_issue">網路異常，暫時無法獲取航班資訊</string>
    <string name="cannot_retrived_the_information_due_to_network_issue">網路異常，暫時無法取得資訊</string>
    <string name="no_flight_information_found">查無符合的航班</string>
    <string name="terminal_1">第一航廈</string>
    <string name="terminal_2">第二航廈</string>
    <string name="loading_update_flight_date">航班資訊更新中...</string>
    <string name="loading_sending_feedback">問卷結果傳送中...</string>
    <string name="copyright_label_1">桃園國際機場版權所有 © 2014</string>
    <string name="copyright_label_2">本系統由遠傳電信、蝦米創意媒體設計</string>
    <string name="convert">轉換</string>
    <string name="currency_convery_description">點擊國旗或是文字輸入框來轉換匯率</string>
    <string name="sails_map_load_fail">讀取遠端地圖失敗，請檢查網路連線是否正常。</string>
    <string name="sails_cannot_detect_postion">無法偵測您目前的位置。</string>
    <string name="sails_dialog_retry">重試</string>
    <string name="sails_start_detect_location">正在尋找您目前的位置...</string>
    <string name="ttia"><u>桃園機場官方網站</u></string>
    <string name="name"><u>內部員工通訊功能</u></string>
    <string name="installwechat">請先安裝WeChat</string>
    <string name="WXAppisInstalled">如果您尚未在微信App中登入您的帳號，按下確定後，將跳轉至微信App中執行登入驗證。登入完畢後，請按返回鍵返回此App。</string>
    <string name="gotoquestion">為了向您提供更好的服務，是否願意協助我們做個問卷調查呢？</string>
    <string name="This_version_not_supported">目前版本暫時無法支援</string>
    <string name="start">開始導航</string>
    <string name="stop">結束導航</string>
    <string name="start_noset_position">因為無法偵測您目前的所在位置，所以無法導航</string>
    <string name="parking">車位</string>
    <string name="available">尚有</string>
    <string name="full">車位已滿</string>
    <string name="parking_remain">剩餘車位</string>
    <string name="useful_quest_title">填寫問卷</string>
    <string name="useful_quest_des">說明:非常不滿意1分、不滿意2分、普通3分、\n滿意4分、非常滿意5分。</string>
    <string name="useful_quest_send">送出</string>
    <string name="restaurant_store_search_select_terminal">請選擇航廈</string>
    <string name="restaurant_store_search_select_area">請選擇區域</string>
    <string name="restaurant_store_search_select_floor">請選擇樓層</string>
    <string name="restaurant_store_search_select_kind_of_restaurant_title">請選擇餐廳種類</string>
    <string name="flights_search_search">搜尋</string>
    <string name="parking_info_parking_space_much">"車位充足"</string>
    <string name="parking_info_parking_space_enough">"尚有車位"</string>
    <string name="parking_info_parking_space_full">"車位已滿"</string>
    <string name="sweet_edit">編輯</string>
</resources>