<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_bg">

    <RelativeLayout
        android:id="@+id/layout_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_pixel_20"
        android:layout_marginTop="@dimen/dp_pixel_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/useful_quest_title"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_pixel_18"
            android:layout_margin="@dimen/dp_pixel_15"
            android:layout_centerInParent="true"/>

        <RelativeLayout
            android:layout_marginRight="@dimen/dp_pixel_10"
            android:id="@+id/layout_delete"
            android:layout_width="@dimen/dp_pixel_60"
            android:layout_height="@dimen/dp_pixel_40"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/but_bg_mdpi">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/useful_quest_send"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_pixel_15" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/useful_quest_des"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_pixel_16"
        android:layout_margin="@dimen/dp_pixel_15"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/layout_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

</LinearLayout>