<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundHomeDeparture"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_pixel_20"
        android:layout_marginTop="@dimen/dp_pixel_20">

        <RelativeLayout
            android:id="@+id/layout_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/textView_delete"
                android:layout_width="@dimen/dp_pixel_65"
                android:layout_height="@dimen/dp_pixel_32"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_pixel_10"
                android:background="@drawable/date"
                android:gravity="center"
                android:text="@string/cell_btn_delete"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_pixel_13"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView_cancel"
                android:layout_width="@dimen/dp_pixel_65"
                android:layout_height="@dimen/dp_pixel_32"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_pixel_10"
                android:background="@drawable/date"
                android:gravity="center"
                android:text="@string/flight_state_cancelled"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_pixel_13"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView_edit"
                android:layout_width="@dimen/dp_pixel_65"
                android:layout_height="@dimen/dp_pixel_32"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_pixel_10"
                android:background="@drawable/date"
                android:gravity="center"
                android:text="@string/sweet_edit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_pixel_13"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_marginBottom="@dimen/dp_pixel_15"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_subtitle" />
</RelativeLayout>