<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_bg"
    android:clickable="true">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_pixel_120"
        android:layout_alignParentBottom="true"
        android:background="@color/black0.6"
        android:clickable="true">


        <LinearLayout
            android:id="@+id/layout_much"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_pixel_20"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_pixel_30"
                android:layout_height="@dimen/dp_pixel_37"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_pixel_8"
                android:background="@drawable/parking_info_04_01_02_1"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxEms="8"
                android:maxLines="2"
                android:text="@string/parking_info_parking_space_much"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_pixel_13" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_enough"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_pixel_20"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_pixel_30"
                android:layout_height="@dimen/dp_pixel_37"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_pixel_8"
                android:background="@drawable/parking_info_04_01_01"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxEms="6"
                android:maxLines="2"
                android:text="@string/parking_info_parking_space_enough"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_pixel_13" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_full"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_pixel_20"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_pixel_30"
                android:layout_height="@dimen/dp_pixel_37"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_pixel_8"
                android:background="@drawable/parking_info_04_01_03_1"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxEms="6"
                android:maxLines="2"
                android:text="@string/parking_info_parking_space_full"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_pixel_13" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>