<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundHomeDeparture"
    android:clickable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layout_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_pixel_20"
                android:layout_marginTop="@dimen/dp_pixel_20">

                <TextView
                    android:id="@+id/textView_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorHomeLeftTitle"
                    android:textSize="@dimen/sp_pixel_21" />
            </RelativeLayout>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/layout_subtitle"
                android:layout_marginBottom="@dimen/dp_pixel_20"
                android:background="@android:color/white" />

            <RelativeLayout
                android:id="@+id/layout_terminal"
                android:layout_width="@dimen/dp_pixel_330"
                android:layout_height="@dimen/dp_pixel_50"
                android:layout_below="@+id/line"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_pixel_15"
                android:layout_marginLeft="@dimen/dp_pixel_20">

                <TextView
                    android:id="@+id/textView_terminal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/input_background"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_pixel_8"
                    android:text="@string/restaurant_store_search_select_terminal"
                    android:textColor="@color/colorTextStore"
                    android:textSize="@dimen/sp_pixel_15" />

                <ImageView
                    android:layout_width="@dimen/dp_pixel_38"
                    android:layout_height="@dimen/dp_pixel_50"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/input_01" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_area"
                android:layout_width="@dimen/dp_pixel_330"
                android:layout_height="@dimen/dp_pixel_50"
                android:layout_below="@+id/layout_terminal"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_pixel_15"
                android:layout_marginLeft="@dimen/dp_pixel_20">

                <TextView
                    android:id="@+id/textView_area"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/input_background"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_pixel_8"
                    android:text="@string/restaurant_store_search_select_area"
                    android:textColor="@color/colorTextStore"
                    android:textSize="@dimen/sp_pixel_15" />

                <ImageView
                    android:layout_width="@dimen/dp_pixel_38"
                    android:layout_height="@dimen/dp_pixel_50"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/input_01" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_floor"
                android:layout_width="@dimen/dp_pixel_330"
                android:layout_height="@dimen/dp_pixel_50"
                android:layout_below="@+id/layout_area"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_pixel_15"
                android:layout_marginLeft="@dimen/dp_pixel_20">

                <TextView
                    android:id="@+id/textView_floor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/input_background"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_pixel_8"
                    android:text="@string/restaurant_store_search_select_floor"
                    android:textColor="@color/colorTextStore"
                    android:textSize="@dimen/sp_pixel_15" />


                <ImageView
                    android:layout_width="@dimen/dp_pixel_38"
                    android:layout_height="@dimen/dp_pixel_50"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/input_01" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_restaurant"
                android:layout_width="@dimen/dp_pixel_330"
                android:layout_height="@dimen/dp_pixel_50"
                android:layout_below="@+id/layout_floor"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_pixel_15"
                android:layout_marginLeft="@dimen/dp_pixel_20">

                <TextView
                    android:id="@+id/textView_restaurant"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/input_background"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_pixel_8"
                    android:text="@string/restaurant_store_search_select_kind_of_restaurant_title"
                    android:textColor="@color/colorTextStore"
                    android:textSize="@dimen/sp_pixel_15" />

                <ImageView
                    android:layout_width="@dimen/dp_pixel_38"
                    android:layout_height="@dimen/dp_pixel_50"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/input_01" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_search"
                android:layout_width="@dimen/dp_pixel_87"
                android:layout_height="@dimen/dp_pixel_50"
                android:layout_below="@+id/layout_restaurant"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_pixel_30"
                android:layout_marginTop="@dimen/dp_pixel_30"
                android:background="@drawable/frame_dialog_button">

                <ImageView
                    android:id="@+id/imageView_search"
                    android:layout_width="@dimen/dp_pixel_29"
                    android:layout_height="@dimen/dp_pixel_33"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_pixel_10"
                    android:background="@drawable/magnifier" />

                <com.whatmedia.ttia.utility.FontFitTextView
                    android:id="@+id/textView_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_pixel_10"
                    android:layout_toRightOf="@+id/imageView_search"
                    android:text="@string/flights_search_search"
                    android:textColor="@color/colorHomeLeftTitle"
                    android:textSize="@dimen/sp_pixel_18" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>